GN-186 Fix issue with links not wrapping due to IE11 flexbox shortcomings when width isn't specified

--- a/src/Header/Nav/NavLinks/NavLinks.module.scss
+++ b/src/Header/Nav/NavLinks/NavLinks.module.scss
@@ -9,6 +9,13 @@
   @extend .menuList;
 }
 
+// IE11 needs width declaring explicitly to text wrap properly under flexbox
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .menuList li {
+    flex-basis: 100%;
+  }
+}
+
 a.link,
 button.link {
   @extend .linkStyling;
